# ehsd-lab-1

./: README.md
.github/workflows/: latex_spellcheck.yml  main.yml
data/: broad.csv  broad2.csv  sim_broad.txt  sim_stripline.txt  sim_ustrip.txt  strip2.csv  stripline.csv  ustrip.csv  ustrip2.csv
latex/: main.tex
latex/sections/: frontpage.tex  part_01.tex  part_02.tex
latex/settings/: preamble.tex
ltspice/: circuit_model.asc
python-notebooks/: david-signal-reconstruction-2.45v.ipynb  david-signal-reconstruction.ipynb  notebook.ipynb  pyproject.toml  sim_plot.ipynb  task_1_3.ipynb
